
[package]
name = "satin_demoverb"
version = "0.1.0"
authors = ["audiodog301"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baseplug = { git = "https://github.com/wrl/baseplug", branch = "trunk" }
serde = "1.0.117"
vst = "0.2.0"

[lib]
name = "satin_demoverb"
crate-type = ["cdylib"]